--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Kowalewskaya/frontend-project-lvl2#readme",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "commander": "^11.1.0",
     "lodash": "^4.17.21"
   },
